--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -24,12 +24,14 @@
         <tr>
           <th>Краткое описание</th>
           <th>Ссылка</th>
+          <th>Дата загрузки</th>
           <th>Источник</th>
         </tr>
         <% @offers.each do |offer| %>
           <tr class="<%= cycle('odd', 'even') %>">
               <td><%= offer.title %></td>
               <td><a href="<%= offer.href %>" target="_blank">посмотреть</a></td>
+              <td><%= offer.created_at.strftime('%d-%m-%Y') %></td>
               <td>Групон</td>
           </tr>
         <% end %>
