--- a/public/stylesheets/web-app-theme/themes/default/style.css
+++ b/public/stylesheets/web-app-theme/themes/default/style.css
@@ -194,8 +194,8 @@ hr {
   float: right;
 }
 #sidebar .block {
-  padding-top: 2px;
-  padding-bottom: 2px;
+  /*padding-top: 2px;*/
+  /*padding-bottom: 2px;*/
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
