--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,11 @@
             <%= submit_tag "Поиск" %>
           <% end %>
         </div>
+        <div class="block notice">
+          <h4>Twiter:</h4>
+          <a href="http://twitter.com/kuponobot" class="twitter-follow-button" data-button="grey" data-text-color="#FFFFFF" data-link-color="#00AEFF">Follow @kuponobot</a>
+<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+        </div>
         <%= yield :sidebar %>
       </div>
     </div>    
